fix(#6410, #6411, #6412): an idle connection waits on its socket, a blob is a bytea, and the catalog answers the shape of the question rather than the name of the asker (#6424)
* fix(#6410, #6411, #6412): an idle connection waits on its socket instead of asking it ten times a second, a blob is a bytea, and the catalog answers the shape of the question rather than the name of the asker

"if (!channel.inputHasData()) { sleep(100); return false; }", so every idle
authenticated connection woke its thread ten times a second to ask an empty
socket whether anything had arrived - and a Postgres client pool is expected to
hold long-lived, mostly-idle connections. The read now blocks. Two things had to
keep working and do: a server-side close() breaks a blocked read (the
cancel-request path already relies on it), and a clean client close produces the
EOF the method already handled. The same non-blocking read had a second
consequence, now fixed with it: a client that vanished without sending Terminate
left its thread polling a socket that could never produce another byte, for the
life of the server, because available() answers 0 on a closed peer exactly as it
does on an idle one. waitForAMessage(), which existed only because readMessage
could not block, is gone.

as varchar (OID 1043) from the schema, so a BINARY column's OID depended on
whether the result set happened to be empty - the exact failure the two comments
in that file were written to prevent. Neither answer was right: PostgreSQL has
bytea (OID 17), and typing a blob as an array of one-byte characters makes the
client decode arbitrary bytes as text. BYTEA is now an entry of its own, with the
\x<hex> text format, the raw-bytes binary format, both text formats accepted on
input, and both resolution paths pointing at it.

only its duration. #6377 (and #5912, #5978) bounded how long a connection may
stay unauthenticated; the accept loop still committed one thread and one file
descriptor per accepted socket with no ceili